[feat] Add distance-based TargetedSearcher and GuidedSearcher [feat] Add lazy instantiation
[fix] Fixed GEPExpr lazy instantiation handler

[fix] Included llvm::format in header

[fix] Fixed memory leak
[fix] Added KCallBlock destructor
[fix] Fixed POSIX CMakeList

[test] Disable msan for the test because it times out on CI

fix unclosed files

[fix] base cannot be ConstantExpr

[test] Add sanitizer option explicitly to C compiler

Set pointers on lazy and symbolic variables

[feat] Add timestamps and sime stuff

Added KType wrapper around llvm::Type in order to implement utils method for types

Fixed type detecting in Load and Store opeartions and types compatibility in KType isAccessableFrom method

Fixed logic in KType isTypesSimilar, almost all tests passed

Added commentaries in KType. In KModule implemented topological sort for type dependencies.

Added struct and classess module initialization in KModule.

Redesign for initTypes : it is separated in 3 functions : initTypesFrom Structs/Globals/Instruction to iterate only once over all instructions

Linked KTypes implementation with alloc* functions, removed KType ctor of one parameter

Temporary fix for KTypes initialization : inside KType we call computeKType function instead of looking in map. Needs to be fixed.

Added assertion for non-null KTypes, fixed alocation in addExternalObject

Added type information about variables allocated on heap. Fixed problem with types in lazyInstantiate: now we pass target type instead of trying to determine it inside from instruction (e.g., it gave unexpected void types if allocSite was store instruction)

Fixed (again) lazy types identification: gepExprBases maintains llvm::Types in order to define parent type. Added types for externalObjects.

Fixed errno size before external call.

Inline static variables were replaced with static variables in order to match C++14. Fixed problems with creating KCallAllocBlock from nullptr and types instantiating.

Fixed type initializati

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ Debug+Asserts/
 Output/
 
 # commonly used as cmake build directory
-/build
+build/
+release-build/
 
 cscope.*
 *~
@@ -30,3 +31,5 @@ lit.site.cfg
 autoconf/aclocal.m4
 autoconf/autom4te.cache/
 autom4te.cache/
+
+.vscode
