--- a/test/lit.site.cfg.in
+++ b/test/lit.site.cfg.in
@@ -11,6 +11,10 @@ config.llvm_tools_dir = "@LLVM_TOOLS_DIR@"
 
 config.libcxx_include_dir = "@KLEE_LIBCXX_INCLUDE_DIR@"
 
+config.undefined_sanitizer = ""
+if @IS_UBSAN_BUILD@:
+  config.undefined_sanitizer = "-lubsan -fsanitize-link-c++-runtime -lstdc++"
+
 # Needed to check if a hack needs to be applied
 config.llvm_version_major = "@LLVM_VERSION_MAJOR@"
 config.llvm_version_minor = "@LLVM_VERSION_MINOR@"
